# poetry-core

./: .pre-commit-config.yaml
tests/fixtures/project_with_vcs_dependencies/: pyproject.toml
